--- a/Views/HomePage.xaml
+++ b/Views/HomePage.xaml
@@ -6,39 +6,75 @@
              x:Name="Page"
              x:Class="RockRebel.Views.HomePage">
 
-    <ScrollView>
+    <ContentPage.Content>
+        <RefreshView IsRefreshing="{Binding Busy}" Command="{Binding RefreshDataCommand}">
+            <Grid ColumnDefinitions="*,*"
+          RowDefinitions="auto,*"
+          Padding="10">
 
-        <CollectionView ItemsSource="{Binding Songs}">
+                <CollectionView ItemsSource="{Binding Songs}"
+                        Grid.ColumnSpan="2"
+                        Grid.Row="1">
 
-            <CollectionView.ItemTemplate>
+                    <CollectionView.ItemTemplate>
 
-                <DataTemplate x:DataType="model:Song">
+                        <DataTemplate x:DataType="model:Song">
 
-                    <StackLayout Padding="10">
+                            <Grid ColumnDefinitions="*,*"
+                          RowDefinitions="*,*,*,*, auto">
 
-                        <Label Text="{Binding Title}" FontSize="Large" />
-                        <Label Text="{Binding Artist}" FontSize="Medium" />
-                        <Label Text="{Binding Genre}" FontSize="Small" />
-                        <Label Text="{Binding Likes}"/>
+                                <Label Text="{Binding Title}"
+                               FontSize="15"
+                               Grid.Column="0"
+                               Grid.Row="0"
+                               Grid.ColumnSpan="4"/>
 
-                        <Picker Title="Choose a genre..."
-                                x:DataType="viewmodel:SongViewModel"
-                                ItemsSource="{Binding Source={x:Reference Page}, Path=BindingContext.Genres}"
-                                SelectedItem="{Binding SelectedGenre, Mode=TwoWay, Source={RelativeSource AncestorType={x:Type viewmodel:SongViewModel}}}"/>
+                                <Label Text="{Binding Artist}"
+                               FontSize="12"
+                               Grid.Column="0"
+                               Grid.Row="1"/>
 
-                        <Button Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:SongViewModel}}, Path=AddLikeCommand}"
-                                CommandParameter="{Binding Title}" Text="Like"/>
+                                <Label Text="{Binding Genre}"
+                               FontSize="12"
+                               Grid.Column="0"
+                               Grid.Row="3"/>
 
-                        <Label TextColor="Red" 
-                            Text="{Binding PopSong, Source={RelativeSource AncestorType={x:Type viewmodel:SongViewModel}}}"/>
+                                <Label Text="{Binding Year}"
+                               FontSize="12"
+                               Grid.Column="0"
+                               Grid.Row="2"/>
 
-                    </StackLayout>
+                                <Label Text="{Binding Likes}"
+                               Grid.Column="2"
+                               Grid.Row="1"
+                               HorizontalOptions="End"/>
 
-                </DataTemplate>
+                                <BoxView HeightRequest="1"
+                                 BackgroundColor="Gray"
+                                 HorizontalOptions="FillAndExpand"
+                                 Grid.ColumnSpan="3"
+                                 Grid.Row="4"
+                                 Margin="0,0,0,10"/>
 
-            </CollectionView.ItemTemplate>
+                            </Grid>
 
-        </CollectionView>
+                        </DataTemplate>
 
-    </ScrollView>
+                    </CollectionView.ItemTemplate>
+
+                </CollectionView>
+
+                <VerticalStackLayout Grid.Row="0"
+                             Margin="0,0,0,50">
+
+                    <Label Text="Most popular song: "/>
+                    <Label Text="{Binding PopSong}"/>
+
+                </VerticalStackLayout>
+
+            </Grid>
+        </RefreshView>
+    </ContentPage.Content>
+
+    
 </ContentPage>
