--- a/Views/HomePage.xaml
+++ b/Views/HomePage.xaml
@@ -9,52 +9,59 @@
     <ContentPage.Content>
         <RefreshView IsRefreshing="{Binding Busy}" Command="{Binding RefreshDataCommand}">
             <Grid ColumnDefinitions="*,*"
-          RowDefinitions="auto,*"
-          Padding="10">
+                  RowDefinitions="auto,*"
+                  Padding="10">
 
                 <CollectionView ItemsSource="{Binding Songs}"
-                        Grid.ColumnSpan="2"
-                        Grid.Row="1">
+                                Grid.ColumnSpan="2"
+                                Grid.Row="1">
 
                     <CollectionView.ItemTemplate>
 
                         <DataTemplate x:DataType="model:Song">
 
                             <Grid ColumnDefinitions="*,*"
-                          RowDefinitions="*,*,*,*, auto">
+                                  RowDefinitions="*,*,*,*, auto">
 
                                 <Label Text="{Binding Title}"
-                               FontSize="15"
-                               Grid.Column="0"
-                               Grid.Row="0"
-                               Grid.ColumnSpan="4"/>
+                                       FontSize="15"
+                                       Grid.Column="0"
+                                       Grid.Row="0"
+                                       Grid.ColumnSpan="4"/>
 
                                 <Label Text="{Binding Artist}"
-                               FontSize="12"
-                               Grid.Column="0"
-                               Grid.Row="1"/>
+                                       FontSize="12"
+                                       Grid.Column="0"
+                                       Grid.Row="1"/>
 
                                 <Label Text="{Binding Genre}"
-                               FontSize="12"
-                               Grid.Column="0"
-                               Grid.Row="3"/>
+                                       FontSize="12"
+                                       Grid.Column="0"
+                                       Grid.Row="3"/>
 
                                 <Label Text="{Binding Year}"
-                               FontSize="12"
-                               Grid.Column="0"
-                               Grid.Row="2"/>
+                                       FontSize="12"
+                                       Grid.Column="0"
+                                       Grid.Row="2"/>
 
                                 <Label Text="{Binding Likes}"
-                               Grid.Column="2"
-                               Grid.Row="1"
-                               HorizontalOptions="End"/>
+                                       Grid.Column="2"
+                                       Grid.Row="1"
+                                       HorizontalOptions="End"/>
+
+                                <Button Text="Like"
+                                        Grid.Column="1"
+                                        WidthRequest="50"
+                                        HorizontalOptions="End"
+                                        Command="{Binding Source={x:Reference Page}, Path=BindingContext.AddLikeCommand}"
+                                        CommandParameter="{Binding Title}"/>
 
                                 <BoxView HeightRequest="1"
-                                 BackgroundColor="Gray"
-                                 HorizontalOptions="FillAndExpand"
-                                 Grid.ColumnSpan="3"
-                                 Grid.Row="4"
-                                 Margin="0,0,0,10"/>
+                                         BackgroundColor="Gray"
+                                         HorizontalOptions="FillAndExpand"
+                                         Grid.ColumnSpan="3"
+                                         Grid.Row="4"
+                                         Margin="0,0,0,30"/>
 
                             </Grid>
 
@@ -65,10 +72,15 @@
                 </CollectionView>
 
                 <VerticalStackLayout Grid.Row="0"
-                             Margin="0,0,0,50">
+                                     Grid.ColumnSpan="2"
+                                     Margin="0,0,0,50"
+                                     HorizontalOptions="Center">
 
-                    <Label Text="Most popular song: "/>
-                    <Label Text="{Binding PopSong}"/>
+                    <Label Text="Most popular song: "
+                           HorizontalTextAlignment="Center"/>
+                    
+                    <Label Text="{Binding PopSong}"
+                           FontSize="15"/>
 
                 </VerticalStackLayout>
 
